crates/aven-check/tests/fixtures/check/invalid/optional-nullable-match.av
source : ?Text? = undefined
result = source ?>
  undefined => 0
  value => 1
